shifted data persistence from in-memory to Spring data JPA + MySql